Changed questions a little

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
   <body>
     <img class="header-img" src="/img/header_background.png" />
     <div class="container main-container">
-      <h3>Kaikki internetissä on totta, koska...</h3>
+      <h3>Kaikki internetissä on totta?</h3>
       <textarea id="question-1" class="form-control record-form"></textarea>
       <hr/>
-      <h3>Donald Trump on huono presidentti koska...</h3>
+      <h3>Donald Trump presidentiksi?</h3>
       <textarea id="question-2" class="form-control record-form"></textarea>
       <hr/>
-      <h3>Java on tulevaisuuden ohjelmointikieli, koska...</h3>
+      <h3>Tulevaisuuden ohjelmointikieli?</h3>
       <textarea id="question-3" class="form-control record-form"></textarea>
     </div>
   </body>
